cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/template__trinity-large-preview:free-cgo-local__row_133_update_4_template_20260312_021418.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template to create a self-contained web server environment with VPC, subnet, security group, and EC2 instance preconfigured with Apache, PHP, and sample web content.

Parameters:
  VPCCIDR:
    Type: String
    Default: 10.0.0.0/16
    Description: CIDR block for the VPC
  SubnetCIDR:
    Type: String
    Default: 10.0.1.0/24
    Description: CIDR block for the subnet
  S3BucketName:
    Type: String
    Default: mywebserver-content-bucket
    Description: Name of the S3 bucket to host the ZIP file
  S3ZipFileName:
    Type: String
    Default: web-content.zip
    Description: Name of the ZIP file in the S3 bucket

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: WebServerVPC
        - Key: Environment
          Value: Production
        - Key: Application
          Value: WebServer

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: WebServerIGW
        - Key: Environment
          Value: Production
        - Key: Application
          Value: WebServer

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: WebServerRouteTable
        - Key: Environment
          Value: Production
        - Key: Application
          Value: WebServer

  InternetRoute:
    Type: AWS::EC2::Route
    DependsOn: VPCGatewayAttachment
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Ref SubnetCIDR
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: WebServerSubnet
        - Key: Environment
          Value: Production
        - Key: Application
          Value: WebServer

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: WebServerSG
        - Key: Environment
          Value: Production
        - Key: Application
          Value: WebServer

  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref S3BucketName
      VersioningConfiguration:
        Status: Enabled
      Tags:
        - Key: Name
          Value: WebServerContentBucket
        - Key: Environment
          Value: Production
        - Key: Application
          Value: WebServer

  S3BucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref S3Bucket
      PolicyDocument:
        Statement:
          - Effect: Allow
            Principal: '*'
            Action: s3:GetObject
            Resource: !Sub 'arn:aws:s3:::${S3BucketName}/*'

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: ami-0c55b159cbfafe1f0
      SubnetId: !Ref Subnet
      SecurityGroupIds:
        - !Ref SecurityGroup
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash
            yum update -y
            yum install -y httpd php
            systemctl start httpd
            systemctl enable httpd
            aws s3 cp s3://${S3BucketName}/${S3ZipFileName} /tmp/web-content.zip
            unzip /tmp/web-content.zip -d /var/www/html/
            chmod -R 755 /var/www/html/
      Tags:
        - Key: Name
          Value: WebServerInstance
        - Key: Environment
          Value: Production
        - Key: Application
          Value: WebServer

Outputs:
  InstancePublicIP:
    Description: Public IP address of the web server instance
    Value: !GetAtt EC2Instance.PublicIp
  VPCId:
    Description: ID of the VPC
    Value: !Ref VPC
  WebsiteURL:
    Description: URL of the deployed website
    Value: !Sub 'http://${EC2Instance.PublicDnsName}'
